<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/easyButton"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/start_new_game"
        android:layout_marginBottom="40dp" />
        <Button
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mediumButton"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/easy"
            />
        <Button
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/hardButton"
            android:layout_centerInParent="true"
            android:text="@string/medium"
            />
        <Button
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard"
            />
</RelativeLayout>