<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">
    <TextView
        android:id="@+id/playerResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:text="@string/correct_answers"/>
    <TextView
        android:id="@+id/playerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/playerResults"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/flag_guru" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerResults"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/play_again" />


</RelativeLayout>